--- a/foundations/03-grouping-selectors/index.html
+++ b/foundations/03-grouping-selectors/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+  
+    <div class="Pickme">Click Me!</button>
+    <div class="Nopickme">No, Click Me!</button>
+    </div>
+    
   </body>
 </html>
